Implemented 2d simulation thread